core/src/ast/snapshots/diplomat_core__ast__methods__tests__cfged_method.snap
---
source: core/src/ast/methods.rs
expression: "Method::from_syn(&syn::parse_quote!\n{\n    #[doc = r\" Some docs.\"] #[diplomat::rust_link(foo::Bar::batz, FnInStruct)]\n    #[cfg(any(feature = \"foo\", not(feature = \"bar\")))] fn\n    foo(x: u64, y: MyCustomStruct) {}\n},\nPathType::new(Path::empty().sub_path(Ident::from(\"MyStructContainingMethod\"))),\nNone, &Attrs::default(), &crate::ast::SpanLocation::None)"
---
name:
  - foo
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
docs:
  - - cfg: Star
      lines: Some docs.
  - - path:
        elements:
          - - foo
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location:
                LocalSource: ", FnInStruct"
          - - Bar
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location:
                LocalSource: ", FnInStruct"
          - - batz
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location:
                LocalSource: ", FnInStruct"
      typ: FnInStruct
      display: Normal
abi_name:
  - MyStructContainingMethod_foo
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
self_param: ~
self_type:
  path:
    elements:
      - - MyStructContainingMethod
        - ~
  lifetimes: []
params:
  - name:
      - x
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    ty:
      Primitive: u64
    attrs: {}
  - name:
      - y
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    ty:
      Named:
        path:
          elements:
            - - MyCustomStruct
              - start_line: 1
                column_line: 0
                range:
                  start: 0
                  end: 0
                span_location: None
        lifetimes: []
    attrs: {}
return_type: ~
lifetime_env: {}
attrs:
  cfg:
    - "# [cfg (any (feature = \"foo\" , not (feature = \"bar\")))]"
