core/src/ast/snapshots/diplomat_core__ast__methods__tests__nonstatic_params_held_by_return_type-2.snap
---
source: core/src/ast/methods.rs
expression: "Method::from_syn(&syn::parse_quote! {\n                    #[diplomat :: rust_link(foo :: Bar :: batz, FnInStruct)] fn\n                    foo < 'x, 'y > (& 'x self, x : & 'x X, y : & 'y Y, z : & Z)\n                    -> Foo < 'x, 'y > { Foo(self, x, y) }\n                },\n        PathType::new(Path::empty().sub_path(Ident::from(\"MyStructContainingMethod\"))),\n        vec![]).output_lifetime_dependent_params()"
---
- name: self
  ty:
    Reference:
      - Named: x
      - Immutable
      - Named:
          path:
            elements:
              - MyStructContainingMethod
          lifetimes: []
- name: x
  ty:
    Reference:
      - Named: x
      - Immutable
      - Named:
          path:
            elements:
              - X
          lifetimes: []
- name: y
  ty:
    Reference:
      - Named: y
      - Immutable
      - Named:
          path:
            elements:
              - Y
          lifetimes: []

